# covid19-p2p-geo

./: .gitignore  CMakeLists.txt  README.md
api/: CMakeLists.txt
api/include/: api.hpp  generic_utils.hpp  geo_utils.hpp  geos_utils.hpp  hdf5_utils.hpp  regions.hpp
api/include/private/: generic_utils.hpp  geo_utils.hpp  hdf5_utils.hpp  regions.hpp  uid_utils.hpp
api/src/: api.cpp
apps/: CMakeLists.txt
apps/src/: random_tester.cpp  tester.cpp
cmake/Modules/: FindGEOS.cmake
preproc/: README.md  conda-env.yml
preproc/src/: census.py  hdf5_exporter.py  utils.py
python/: MANIFEST.in  README.md  requirements-full.txt  requirements.txt  setup.py
python/src/covid19geo/: census.py  hdf5_exporter.py  utils.py  zone.py
test/: CMakeLists.txt
test/src/: main.cpp  test_api.cpp  test_geo.cpp  test_uids.cpp
